Add cin exercise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(
         part-1-fundamentals/1-the-basics/3_sales_tax_calculator.cpp
         part-1-fundamentals/1-the-basics/1_swap_variables.cpp
         part-1-fundamentals/1-the-basics/2_calculate_expression.cpp
+        part-1-fundamentals/1-the-basics/4_calculate_user_age.cpp
 )
