Add new exercise using getline().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ add_executable(
             # 2. Fundamental Data Types
                 part-1-fundamentals/2-fundamental-data-types/1_roll_the_dice.cpp
                 part-1-fundamentals/2-fundamental-data-types/2_formatted_output_table.cpp
+        part-1-fundamentals/2-fundamental-data-types/3_address_input_using_getline.cpp
 )
