--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,5 @@ add_executable(
                 part-1-fundamentals/3-decision-making/1_job_eligibility.cpp
                 part-1-fundamentals/3-decision-making/2_commission_calculation.cpp
                 part-1-fundamentals/3-decision-making/3_larger_number.cpp
+                part-1-fundamentals/3-decision-making/4_basic_calculator_using_switch.cpp
 )
