--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,5 @@ add_executable(
                 part-1-fundamentals/3-decision-making/4_basic_calculator_using_switch.cpp
                 part-1-fundamentals/4-loops/1_factorial-calculator.cpp
                 part-1-fundamentals/4-loops/2_average-temperature.cpp
+                part-1-fundamentals/4-loops/3_secret_number.cpp
 )
