Add "Comparing Arrays" exercise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,5 +44,7 @@ add_executable(
         # Part 2: Intermediate
             # 1. Arrays
                 part-2-intermediate/1-arrays/1_copy_from_one_array_to_another.cpp
+                part-2-intermediate/1-arrays/2_comparing_arrays.cpp
+                part-2-intermediate/1-arrays/3_structured_binding.cpp
                 part-2-intermediate/1-arrays/arrays.h
 )
