Add "Linear Search Algorithm" exercise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,5 +47,6 @@ add_executable(
                 part-2-intermediate/1-arrays/2_comparing_arrays.cpp
                 part-2-intermediate/1-arrays/3_structured_binding.cpp
                 part-2-intermediate/1-arrays/4_linear_search_algorithm.cpp
+                part-2-intermediate/1-arrays/5_bubble_sort_algorithm.cpp
                 part-2-intermediate/1-arrays/arrays.h
 )
