--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,4 +50,7 @@ add_executable(
                 part-2-intermediate/1-arrays/5_bubble_sort_algorithm.cpp
                 part-2-intermediate/1-arrays/6_multi_dimensional_array.cpp
                 part-2-intermediate/1-arrays/arrays.h
+            # 2. Pointers
+                part-2-intermediate/2-pointers/1_modify_with_pointers.cpp
+                part-2-intermediate/2-pointers/pointers.h
 )
