--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,5 +53,6 @@ add_executable(
             # 2. Pointers
                 part-2-intermediate/2-pointers/1_modify_with_pointers.cpp
                 part-2-intermediate/2-pointers/2_swap_variable_values_using_pointers.cpp
+                part-2-intermediate/2-pointers/3_reverse_iteration_using_pointer.cpp
                 part-2-intermediate/2-pointers/pointers.h
 )
