--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,4 +55,7 @@ add_executable(
                 part-2-intermediate/2-pointers/2_swap_variable_values_using_pointers.cpp
                 part-2-intermediate/2-pointers/3_reverse_iteration_using_pointer.cpp
                 part-2-intermediate/2-pointers/pointers.h
+            # 3. Strings
+                part-2-intermediate/3-strings/1_searching_characters_in_strings.cpp
+                part-2-intermediate/3-strings/strings.h
 )
