--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,4 +60,7 @@ add_executable(
                 part-2-intermediate/3-strings/2_extracting_substrings.cpp
                 part-2-intermediate/3-strings/3_customer_number_validation.cpp
                 part-2-intermediate/3-strings/strings.h
+            # 4. Structures and Enumerations
+                part-2-intermediate/4-structures-and-enumerations/1_represent_customers_via_structures.cpp
+                part-2-intermediate/4-structures-and-enumerations/structures-and-enumerations.h
 )
