Add "Vector Iteration With User Defined Objects" exercise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,5 +62,6 @@ add_executable(
                 part-2-intermediate/3-strings/strings.h
             # 4. Structures and Enumerations
                 part-2-intermediate/4-structures-and-enumerations/1_represent_customers_via_structures.cpp
+                part-2-intermediate/4-structures-and-enumerations/2_vector_iteration_with_user_defined_objects.cpp
                 part-2-intermediate/4-structures-and-enumerations/structures-and-enumerations.h
 )
