Add "Operator Overloading to Compare and Stream Points" exercise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,5 +64,6 @@ add_executable(
                 part-2-intermediate/4-structures-and-enumerations/1_represent_customers_via_structures.cpp
                 part-2-intermediate/4-structures-and-enumerations/2_vector_iteration_with_user_defined_objects.cpp
                 part-2-intermediate/4-structures-and-enumerations/3_enhanced_customer_object_with_nested_struct.cpp
+                part-2-intermediate/4-structures-and-enumerations/4_operator_overloading_to_compare_and_stream_points.cpp
                 part-2-intermediate/4-structures-and-enumerations/structures-and-enumerations.h
 )
