Add CheckBox class and demonstrate Polymorphism

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,5 +124,8 @@ add_executable(
                 part-3-advanced/3-inheritance-and-polymorphism/2-shape-class/Triangle.cpp
                 part-3-advanced/3-inheritance-and-polymorphism/2-shape-class/Triangle.h
 
+                part-3-advanced/3-inheritance-and-polymorphism/3-checkbox-class/CheckBox.cpp
+                part-3-advanced/3-inheritance-and-polymorphism/3-checkbox-class/CheckBox.h
+
                 part-3-advanced/3-inheritance-and-polymorphism/inheritance-and-polymorphism.h
 )
