Add class template.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,5 +160,10 @@ add_executable(
             # 4. Templates
                 part-3-advanced/5-templates/1-function-template.cpp
                 part-3-advanced/5-templates/2-template-with-multiple-parameters.cpp
+
+                part-3-advanced/5-templates/3-class-template.cpp
+                part-3-advanced/5-templates/Pair.cpp
+                part-3-advanced/5-templates/Pair.h
+
                 part-3-advanced/5-templates/templates.h
 )
